<resources>
    <string name="app_name" translatable="false">RUN BOY RUN</string>
    <string name="server_url" translatable="false">https://runboyrun.herokuapp.com/</string>
    <string name="preferences_file_key" translatable="false">twoAK.runboyrun.preferences</string>
    <string name="vk_app_id" translatable="false">5944334</string>
    <string name="facebook_app_id" translatable="false">1449271205145331</string>
    <string name="google_client_id" translatable="false">1098093132900-dmb49sod7fcbvgj6mtbdoq80rlha1o78.apps.googleusercontent.com</string>
    <string name="google_maps_api_key" translatable="false">AIzaSyA2PUaAVlXGavjM5mPCcsk0WPD9S8296I4</string>
    <string name="action_settings">Settings</string>
    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="navdrawer_description_a11y" translatable="false">Navigation Drawer used to switch between major features of the application</string>
    <string name="title_activity_deleteme">deleteme</string>
    <string name="title_activity_2">Activity2</string>
    <string name="error_toast_no_internet_connection">Could not connect to the server\nPlease check connection</string>
    <string name="welcome_title">WELCOME</string>
    <string name="welcome_buttontext_sign_in">SIGN IN</string>
    <string name="welcome_buttontext_sign_up">SIGN UP</string>
    <string name="welcome_error_toast_token_expired">Our token is expired\nPlease login again</string>
    <string name="signin_title">LOGIN</string>
    <string name="signin_button_signin">SIGN IN</string>
    <string name="signin_button_signin_via_sn">SIGN IN VIA SOCIAL NETWORKS</string>
    <string name="signin_edittext_email">Email</string>
    <string name="signin_edittext_password">Password</string>
    <string name="signin_dialog_login">Log in, please wait</string>
    <string name="signin_error_incorrect_email">incorrect email address</string>
    <string name="signin_error_incorrect_password">incorrect password</string>
    <string name="signin_toast_socialnets_no_data">Data from social network not recieved. Please try again</string>
    <string name="signin_toast_incorrent_login_data">A user with such email and password is not registered</string>
    <string name="presignup_title">REGISTRATION</string>
    <string name="presignup_edittext_email" translatable="false">Email</string>
    <string name="presignup_edittext_password">Password</string>
    <string name="presignup_button_signup">SIGN UP</string>
    <string name="presignup_button_signup_via_sn">SIGN UP VIA SOCIAL NETWORKS</string>
    <string name="presignup_error_incorrect_email">incorrect email address</string>
    <string name="presignup_error_incorrect_password">incorrect password</string>
    <string name="presignup_dialog_check_id">Verification of uniqueness\nWait a moment please</string>
    <string name="presignup_toast_socialnets_no_data">Data from social network not recieved. Please try again</string>
    <string name="presignup_toast_id_not_unique">Such user is already registered</string>
    <string name="signup_birthday">Birthday</string>
    <string name="signup_dialog_country_loading">Loading a list of countries</string>
    <string name="signup_dialog_city_loading">"Loading a list of cities"</string>
    <string name="signup_dialog_registration_waiting">Register you - please wait</string>
    <string name="getprofileinfo_error" translatable="false">incorrect data</string>
    <string name="profile_loading_progress_dialog">Loading data, please wait</string>
    <string name="profile_activity_error_loading_profile_request_failed">Request failed</string>
    <string name="profile_activity_error_loading_profile_insuccessful">Insuccessful</string>
    <string name="profile_activity_text_no_activities_yet">NO ACTIVITIES YET</string>
    <string name="navdrawer_item_start_activity">Start activity</string>
    <string name="navdrawer_item_personal_page">Personal page</string>
    <string name="navdrawer_item_newsfeed">News feed</string>
    <string name="navdrawer_item_search">Search athlele</string>
    <string name="navdrawer_item_subs">Subscriptions</string>
    <string name="navdrawer_item_logout">Logout</string>
    <string name="start_activity_title_select_sport">SELECT A SPORT:</string>
    <string name="start_activity_text_sport_running">RUNNING</string>
    <string name="start_activity_text_sport_cycling">CYCLING</string>
    <string name="start_activity_text_sport_walking">WALKING</string>
    <string name="start_activity_text_sport_skirun">SKI RUN</string>
    <string name="start_activity_title">WHAT DO YOU WANT?</string>
    <string name="start_activity_button_enter_stat">ENTER COMPLETED ACTIVITY</string>
    <string name="start_activity_button_track_activity">TRACK ACTIVITY</string>
    <string name="start_activity_toast_select_sport">Select a sport</string>
    <string name="track_activity_text_label_km">KILOMETERS</string>
    <string name="track_activity_text_label_time">ACTIVITY TIME</string>
    <string name="track_activity_text_label_tempo">MIN/KM</string>
    <string name="track_activity_toast_not_location">Your location is not defined\n
        Make sure the access to a location is allowed</string>
    <string name="track_activity_toast_network_provider">Location data are provided by network provider\n
        They may not be accurate. We advise you to enable GPS</string>
    <string name="track_activity_text_provide_status_title" translatable="false">GPS</string>
    <string name="track_activity_text_provider_status_yes">YES</string>
    <string name="track_activity_text_provider_status_no">NO</string>
    <string name="track_activity_dialog_notprovider_title">Problems with locating</string>
    <string name="track_activity_dialog_notprovider_text">Unable to determine your location.\nCheck in settings if you have permission to receive your current location.</string>
    <string name="track_activity_dialog_button_check_settings">SETTINGS</string>
    <string name="track_activity_dialog_button_cancel">CANCEL</string>
    <string name="track_activity_dialog_start_activity_title">We begin activity!</string>
    <string name="track_activity_dialog_setting_title">Setting sound alerts</string>
    <string name="track_activity_dialog_setting_text_distance">Distance traveled</string>
    <string name="track_activity_dialog_setting_text_time">Elapsed time</string>
    <string name="track_activity_dialog_setting_text_tempo">Average tempo</string>
    <string name="track_activity_dialog_setting_tint_distance">m</string>
    <string name="track_activity_dialog_setting_tint_time">min</string>
    <string name="track_activity_dialog_setting_tint_tempo">min</string>
    <string name="track_activity_dialog_setting_negative">CANCEL</string>
    <string name="track_activity_dialog_setting_positive">START!</string>
    <string name="track_activity_dialog_close_title">Are you sure?</string>
    <string name="track_activity_dialog_close_message">Do you want to cancel tracking?</string>
    <string name="track_activity_dialog_close_yes">YES</string>
    <string name="track_activity_dialog_close_no">NO</string>
    <string name="track_activity_dialog_result_distance_title">DISTANCE:</string>
    <string name="track_activity_dialog_result_tempo_title">TEMPO:</string>
    <string name="track_activity_dialog_result_time_title">TIME:</string>
    <string name="track_activity_dialog_result_button_cancel">CANCEL</string>
    <string name="track_activity_dialog_result_button_record">RECORD</string>
    <string name="enter_completed_text_title_timestart">TIME START</string>
    <string name="enter_completed_text_title_distance">TRAVELED DISTANCE</string>
    <string name="enter_completed_text_title_spenttime">SPENT TIME</string>
    <string name="enter_completed_text_label_minutes">min</string>
    <string name="enter_completed_text_label_hours">hours</string>
    <string name="enter_completed_text_label_km">KM</string>
    <string name="enter_completed_text_label_meters">METERS</string>
    <string name="enter_completed_text_button_record">RECORD</string>
    <string name="enter_completed_toast_error_past">A week has passed</string>
    <string name="enter_completed_toast_error_future">You are in the future</string>
    <string name="enter_completed_toast_error_short_distance">Too short distance</string>
    <string name="enter_completed_toast_error_short_activity">Too short activity</string>
    <string name="condition_title_text_weather">WEATHER</string>
    <string name="condition_title_text_relief">RELIEF</string>
    <string name="condition_title_text_condition">CONDITION</string>
    <string name="condition_title_text_temperature">TEMPERATURE</string>
    <string name="condition_imagetext_weather_sunny">SUNNY</string>
    <string name="condition_imagetext_weather_normal">NORMAL</string>
    <string name="condition_imagetext_weather_rainy">RAINY</string>
    <string name="condition_imagetext_weather_snowy">SNOWY</string>
    <string name="condition_imagetext_relief_stadium">STADIUM</string>
    <string name="condition_imagetext_relief_cross">CROSS</string>
    <string name="condition_imagetext_relief_hills">HILLS</string>
    <string name="condition_imagetext_relief_park">PARK</string>
    <string name="condition_imagetext_condition_good">GOOD</string>
    <string name="condition_imagetext_condition_medium">MEDIUM</string>
    <string name="condition_imagetext_condition_tired">TIRED</string>
    <string name="condition_imagetext_condition_beated">BEATED</string>
    <string name="title_activity_text_sport">sport type</string>
    <string name="title_activity_text_title_running">RUNNING</string>
    <string name="title_activity_text_title_cycling">CYCLING</string>
    <string name="title_activity_text_title_walking">WALKING</string>
    <string name="title_activity_text_title_skirun">SKI RUN</string>
    <string name="condition_panel_text_weather">weather</string>
    <string name="condition_panel_text_temperature">temp</string>
    <string name="condition_panel_text_relief">relief</string>
    <string name="condition_panel_text_condition">condition</string>
    <string name="condition_panel_toast_select_weather">select weather</string>
    <string name="condition_panel_toast_select_relief">select relief</string>
    <string name="condition_panel_toast_select_condition">select condition</string>
    <string name="statistics_panel_text_time">Time:</string>
    <string name="statistics_panel_text_distance">Distance:</string>
    <string name="statistics_panel_text_avrspeed">Avr. speed:</string>
    <string name="statistics_panel_text_tempo">Tempo:</string>
    <string name="statistics_panel_text_distance_label">km</string>
    <string name="statistics_panel_text_avrspeed_label">km/h</string>
    <string name="statistics_panel_text_tempo_label">min/km</string>
    <string name="description_panel_text_title">How it was</string>
    <string name="last_comments_panel_text_title">Last comments</string>
    <string name="last_comments_panel_button_title">WRITE FIRSTCOMMENT</string>
    <string name="sporttype_panel_points_title">POINTS</string>
    <string name="activity_page_dialog_loading_activity_data">Loading activity data...</string>
    <string name="activity_page_error_loading_activity_request_failed">Request failed</string>
    <string name="activity_page_error_loading_activity_insuccessful">Insuccessful response</string>
    <string name="activity_page_dialog_comment_title_write_comment">First comment:</string>
    <string name="activity_page_dialog_comment_button_positive">SEND</string>
    <string name="activity_page_dialog_comment_button_negative">CANCEL</string>
    <string name="activity_page_dialog_comment_sending_progress_text">Sending comment...</string>
</resources>