<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/navdrawer_item_start_activity"
            android:icon="@drawable/ic_directions_run_black_24dp"
            android:title="@string/navdrawer_item_start_activity" />
        <item
            android:id="@+id/navdrawer_item_personal_page"
            android:icon="@drawable/ic_account_box_black_24dp"
            android:title="@string/navdrawer_item_personal_page" />
        <item
            android:id="@+id/navdrawer_item_newsfeed"
            android:icon="@drawable/ic_rss_feed_black_24dp"
            android:title="@string/navdrawer_item_newsfeed" />
    </group>

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/navdrawer_item_search"
            android:icon="@drawable/ic_search_black_24dp"
            android:title="@string/navdrawer_item_search" />

        <item
            android:id="@+id/navdrawer_item_subs"
            android:icon="@drawable/ic_list_black_24dp"
            android:title="@string/navdrawer_item_subs" />

        <item
            android:id="@+id/navdrawer_item_logout"
            android:icon="@drawable/ic_exit_to_app_black_24dp"
            android:title="@string/navdrawer_item_logout" />
    </group>

</menu>
